...
    <string name="pref_clementine_summary">Visit Clementine website</string>

    <string name="pref_dl_wifi_only_title">WiFi only</string>
    <string name="pref_dl_wifi_only_summary">Download songs only when connected to a wifi network.</string>
    <string name="pref_dl_dir">Set download folder</string>
    <string name="pref_dl_volume">Save downloads to</string>
    <string name="pref_dl_volume_unavailable">Not available. Choose where to save downloads.</string>
    <string name="pref_dl_override">Override existing files</string>
    <string name="pref_dl_override_summary">Downloads songs again when they differ from those on this phone.</string>
    <string name="pref_dl_cat_folders">Folders</string>
    <string name="pref_dl_pl_save_own_dir_title">Save tracks in playlist folder</string>
    <string name="pref_dl_pl_save_own_dir_summary">Creates a playlist-named folder and saves tracks in there.</string>
    <string name="pref_dl_pl_artist_dir_title">Create artist subfolder</string>
...
    <string name="widget_connect_to">Touch to connect</string>
    <string name="widget_not_connected">Not connected</string>
    <string name="widget_open_clementine">Touch to start Clementine Remote</string>
    <string name="widget_couldnt_connect">Could not connect</string>
    <string name="widget_description">The song Clementine is playing, with play/pause and next</string>

    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>

    <string name="error_versions">Incompatible version</string>
    <string name="old_proto">Please update Clementine! You need Clementine %1$s or later.</string>

...
